# MMM-case

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
models/: hyperparams_calibration_20240814.json  hyperparams_calibration_20240815.json  hyperparams_calibration_20240816.json  hyperparams_calibration_20240819.json
notebooks/: comparing_regression_models.ipynb  data_analysis.ipynb  explaining_carryover_saturation_effects.ipynb  regression_with_pymc_WIP.ipynb  ridge_regression.ipynb  simulate_model.ipynb
src/: evaluate_model.py  optimize_hyperparams.py  pipeline_model.py  prepare_data.py  regression_model.py
src/utils/: carryover_effect.py  mean_scaler.py  orthogonalization.py  plots.py  ridge_with_constrains_model.py  saturation_effect.py  seasonality_effect.py  utils.py
