[tool.poetry]
name = "projeto-ifood"
version = "0.1.0"
description = ""
authors = ["marianehauy <mariane@arvo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
numpy = "<2.0.0"
pre-commit = "^3.8.0"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
statsmodels = "^0.14.2"
graphviz = "^0.20.3"
arviz = "^0.19.0"
pymc-marketing = "^0.8.0"
optuna = "^3.6.1"
optuna-integration = "^3.6.0"
tabulate = "^0.9.0"
cvxpy = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
